// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomizeView > should render > with services 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        customizeTitleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-services"
    >
      <div
        class="react-cookienotice-service"
      >
        <div
          class="react-cookienotice-service-checkbox"
        >
          <input
            checked=""
            disabled=""
            id="service1Code"
            name="service1Code"
            type="checkbox"
          />
          <label
            for="service1Code"
          >
            service1Code
          </label>
        </div>
        <div
          class="react-cookienotice-service-info"
        >
          <button
            class="react-cookienotice-service-info-title"
          >
            service1Name
            <div
              class="react-cookienotice-service-info-title-always-active"
            >
              <span
                class="react-cookienotice-label"
              >
                alwaysActiveLabel
              </span>
            </div>
          </button>
          <div
            class="react-cookienotice-service-info-content"
            style="max-height: 0;"
          >
            <span
              class="react-cookienotice-label"
            >
              service1Description
            </span>
          </div>
        </div>
      </div>
      <div
        class="react-cookienotice-service"
      >
        <div
          class="react-cookienotice-service-checkbox"
        >
          <input
            id="service2Code"
            name="service2Code"
            type="checkbox"
          />
          <label
            for="service2Code"
          >
            service2Code
          </label>
        </div>
        <div
          class="react-cookienotice-service-info"
        >
          <button
            class="react-cookienotice-service-info-title"
          >
            service2Name
          </button>
          <div
            class="react-cookienotice-service-info-content"
            style="max-height: 0;"
          >
            <span
              class="react-cookienotice-label"
            >
              service2Description
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      backButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      customizeAcceptAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptButtonLabel
    </button>
  </div>
</DocumentFragment>
`;

exports[`CustomizeView > should render > with services empty 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        customizeTitleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-services"
    />
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      backButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      customizeAcceptAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptButtonLabel
    </button>
  </div>
</DocumentFragment>
`;
